--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 	<properties>
 		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
 		<java.version>11</java.version>
+		<!-- plugin -->
+		<build.helper.maven.plugin.version>3.4.0</build.helper.maven.plugin.version>
+		<versions.maven.plugin.version>2.16.0</versions.maven.plugin.version>
 	</properties>
 	<repositories>
 		<!-- personal repository -->
@@ -32,9 +35,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure-processor</artifactId>
-			<optional>true</optional>
 		</dependency>
-
 		<!-- web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -45,19 +46,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-
 		<!-- logging -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>${log4j2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-to-slf4j</artifactId>
-			<version>${log4j2.version}</version>
 		</dependency>
-
 		<!-- common lang3 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -68,7 +65,6 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -92,6 +88,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>${build.helper.maven.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>parse-version</id>
@@ -104,6 +101,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
+				<version>${versions.maven.plugin.version}</version>
 			</plugin>
 		</plugins>
 	</build>
@@ -135,6 +133,7 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>versions-maven-plugin</artifactId>
+						<version>${versions.maven.plugin.version}</version>
 						<executions>
 							<execution>
 								<goals>
@@ -165,6 +164,7 @@
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>versions-maven-plugin</artifactId>
+						<version>${versions.maven.plugin.version}</version>
 						<executions>
 							<execution>
 								<goals>
