--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>kr.sprouts.framework.autoconfigure</groupId>
 	<artifactId>sprouts-web-response-spring-boot-starter</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.4</version>
 	<name>sprouts-web-response-spring-boot-starter</name>
 	<properties>
 		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
