Change personal repository url. Closed #19

--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
 		<versions.maven.plugin.version>2.16.0</versions.maven.plugin.version>
 	</properties>
 	<repositories>
-		<!-- personal repository -->
+		<!-- personal-repository -->
 		<repository>
-			<id>personal-public</id>
-			<url>https://nexus.sprouts.kr/repository/maven/</url>
+			<id>personal-repository</id>
+			<url>https://nexus.devops.sprouts.kr/repository/maven/</url>
 		</repository>
 	</repositories>
 	<dependencies>
