Delete unused plugin and profiles.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.15</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>kr.sprouts.framework.autoconfigure</groupId>
 	<artifactId>sprouts-web-response-spring-boot-starter</artifactId>
@@ -14,9 +14,6 @@
 	<name>sprouts-web-response-spring-boot-starter</name>
 	<properties>
 		<java.version>11</java.version>
-		<!-- plugin -->
-		<build.helper.maven.plugin.version>3.4.0</build.helper.maven.plugin.version>
-		<versions.maven.plugin.version>2.16.0</versions.maven.plugin.version>
 	</properties>
 	<repositories>
 		<!-- personal-repository -->
@@ -83,104 +80,5 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>${build.helper.maven.plugin.version}</version>
-				<executions>
-					<execution>
-						<id>parse-version</id>
-						<goals>
-							<goal>parse-version</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>versions-maven-plugin</artifactId>
-				<version>${versions.maven.plugin.version}</version>
-			</plugin>
-		</plugins>
 	</build>
-	<profiles>
-		<profile>
-			<id>gitlab-package-registry-deploy</id>
-			<distributionManagement>
-				<repository>
-					<id>gitlab-package-registry</id>
-					<!--suppress UnresolvedMavenProperty -->
-					<url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven/</url>
-				</repository>
-				<snapshotRepository>
-					<id>gitlab-package-registry</id>
-					<!--suppress UnresolvedMavenProperty -->
-					<url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven/</url>
-				</snapshotRepository>
-			</distributionManagement>
-		</profile>
-		<profile>
-			<id>snapshot-patch</id>
-			<activation>
-				<property>
-					<name>snapshotPatch</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>versions-maven-plugin</artifactId>
-						<version>${versions.maven.plugin.version}</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>set</goal>
-								</goals>
-								<phase>validate</phase>
-								<configuration>
-									<newVersion>
-										<!--suppress UnresolvedMavenProperty -->
-										${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.nextIncrementalVersion}-SNAPSHOT
-									</newVersion>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>release-patch</id>
-			<activation>
-				<property>
-					<name>releasePatch</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>versions-maven-plugin</artifactId>
-						<version>${versions.maven.plugin.version}</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>set</goal>
-								</goals>
-								<phase>validate</phase>
-								<configuration>
-									<newVersion>
-										<!--suppress UnresolvedMavenProperty -->
-										${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}
-									</newVersion>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
